apps/anthaathi-graphql-framework/packages/anthaathi-graphql-common/src/snapshots/anthaathi_graphql_common__tests__it_load_default_config_1.snap
---
source: packages/anthaathi-graphql-common/src/lib.rs
expression: config
---
apiVersion: alphaV1
spec:
  - hosts:
      - $1.anthaathi.org
    port:
      - name: http
        number: 80
    http:
      - name: goingToFile
        match:
          - name: matchtogoogle
            uri:
              exact: /_api/graphql
              prefix: ~
              regex: ~
            method: ~
            headers: ~
            query_params: ~
            ignoreUriCase: ~
            withoutHeaders: ~
        header: ~
        destination:
          name: FileLoader
          config:
            fileMapping:
              - name: something
                file: data/$1.graphql

