apps/anthaathi-graphql-framework/packages/anthaathi-graphql-common/src/snapshots/anthaathi_graphql_common__tests__it_load_default_config_2.snap
---
source: packages/anthaathi-graphql-common/src/lib.rs
expression: config
---
apiVersion: alphaV1
handler:
  - hosts: ~
    http:
      - name: goingToFile
        match:
          - name: matchtogoogle
            uri:
              exact: /_api/graphql
              prefix: ~
              regex: ~
            headers: ~
            query_params: ~
            ignoreUriCase: ~
            withoutHeaders: ~
        header: ~
        destination:
          name: FileLoader
          config:
            fileMapping:
              - name: something
                file: data/$1.graphql
    listener:
      - http
listener:
  - name: http
    address: "0.0.0.0:3000"
    tls: {}

